deploy: 678d5f900dd0f8e115eb75803abb471dbf4af02b

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <a href=/vrc/hotswap rel=noopener class=internal-link data-src=/vrc/hotswap>hotswap</a>
 <a href=/vrc/%E7%99%BD%E6%AF%9B%E7%A0%94%E7%A9%B6 rel=noopener class=internal-link data-src=/vrc/%E7%99%BD%E6%AF%9B%E7%A0%94%E7%A9%B6>白毛研究</a></p><p>(
 <a href=/vrc/%E4%B8%8A%E4%BC%A0%E6%A8%A1%E5%9E%8B rel=noopener class=internal-link data-src=/vrc/%E4%B8%8A%E4%BC%A0%E6%A8%A1%E5%9E%8B>上传模型</a>
-<a href=/vrc/words/avatar-id rel=noopener class=internal-link data-src=/vrc/words/avatar-id>avatar-id</a> )</p><h2 id=blender>Blender:</h2><p><a href=/vrc/blender/Blender%E8%B5%84%E6%BA%90 rel=noopener class=internal-link data-src=/vrc/blender/Blender%E8%B5%84%E6%BA%90>Blender资源</a></p><h2 id=常用tag>常用Tag:</h2><p>|
+<a href=/vrc/words/avatar-id rel=noopener class=internal-link data-src=/vrc/words/avatar-id>avatar-id</a> )</p><h2 id=blender>Blender:</h2><p><a href=/blender/Blender%E8%B5%84%E6%BA%90 rel=noopener class=internal-link data-src=/blender/Blender%E8%B5%84%E6%BA%90>Blender资源</a>
+<a href=/blender/bake-heightmap rel=noopener class=internal-link data-src=/blender/bake-heightmap>bake-heightmap</a></p><h2 id=常用tag>常用Tag:</h2><p>|
 <a href=https://q.noos.ca/tags/VRChat/ rel=noopener>VRChat</a> |
 <a href=https://q.noos.ca/tags/Blender/ rel=noopener>Blender</a> |
 <a href=https://q.noos.ca/tags/%e6%95%99%e7%a8%8b/ rel=noopener>教程</a> |
